# etl

./: pyproject.toml
compose/: .dockerignore  Dockerfile  docker-compose.yml
etl/: cli.py  run.py
etl/db/: session.py
etl/metadata/: checkpoint_store.py  run_store.py
etl/phases/: download.py  extract.py  load.py  transform.py
src/: .bash_history  pyproject.toml
src/etl/: cli.py  concole.py  log.py  logger.py  progress.py  progress2.py  regex.py  run.py  tre.py
src/etl/alembic/: README  env.py  env2.py
src/etl/alembic/versions/: 457ed28c85fd_initial_tables.py
src/etl/config/: settings.py
src/etl/db/: database.py  etl_checkpoint.sql  etl_run.sql  models.py
src/etl/metadata/: checkpoint_store.py
src/etl/pipelines/: customers.py
