[tool.poetry]
name = "etl"
version = "0.1.0"
description = "Resumable ETL service (download, extract, transform, load)"
authors = ["Your Team <team@example.com>"]
packages = [{ include = "etl" }]


[tool.poetry.dependencies]
python = ">=3.9,<3.10"

# HTTP download
# requests = "^2.31.0"
requests = "==2.25.1"

# Configuration & validation
pydantic = "^2.6.0"
pydantic-settings = "^2.2.1"

# Database
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"

# Migrations
alembic = "^1.13.1"

# CLI
typer = "^0.9.0"

# Utilities
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
